[package]
name = "samir_practice"
version = "0.1.0"
edition = "2024"
authors = ["Samir Wagley"]
description = " This is my first api  library that is made for rust. It is a starting for rust"
license = "MIT"
[dependencies]
account = "0.1.1-beta1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
